Regression: Compositor artefacts #119973

Closed
opened 2024-03-27 18:16:55 +01:00 by HMage · 5 comments

System Information
Operating Systems: Windows 10 and macOS 14.4 (Intel)
Graphics Cards: NVIDIA GeForce RTX 4090 and AMD Radeon Pro 5700 XT

Blender Version
Broken: 4.1.0
Worked: 4.0.2

Short Description of Error
image

Visual artifacts appear, resembling issues where some compositor chunks seem to abort compositing unexpectedly.

Based on my experience as a programmer, I suspect that recent code changes to some of the nodes might have caused a buffer overrun or a similar issue.

Exact Steps for Others to Reproduce the Error
The issue does not occur 100% of the time, which suggests it might be related to a memory error. However, muting and then unmuting the 'Flip X' node before the 'Lens Distortion' node, and setting the chunk size to 32x32, seems to make it easier to trigger.

Steps to reproduce:

  1. Open the default startup file.
  2. Go to the Compositor.
  3. Add a 'Glare' node.
  4. Add a 'Flip X' node.
  5. Add a 'Lens Distortion' node with projector on and dispersion set to 1.
  6. Add another 'Flip X' node.
  7. Connect to the output.

This issue occurs on both macOS (iMac) and Windows 10 systems.

A .blend file that reproduces the issue is attached.

I discovered this issue by opening an old .blend file and rendering it.

If you have trouble reproducing this error or need more assistance in debugging this problem on my machines, please feel free to reach out, and I'll be happy to help.

**System Information** Operating Systems: Windows 10 and macOS 14.4 (Intel) Graphics Cards: NVIDIA GeForce RTX 4090 and AMD Radeon Pro 5700 XT **Blender Version** Broken: 4.1.0 Worked: 4.0.2 **Short Description of Error** ![image](/attachments/e7776d47-2baf-4b46-844f-c0647bdca6a1) Visual artifacts appear, resembling issues where some compositor chunks seem to abort compositing unexpectedly. Based on my experience as a programmer, I suspect that recent code changes to some of the nodes might have caused a buffer overrun or a similar issue. **Exact Steps for Others to Reproduce the Error** The issue does not occur 100% of the time, which suggests it might be related to a memory error. However, muting and then unmuting the 'Flip X' node before the 'Lens Distortion' node, and setting the chunk size to 32x32, seems to make it easier to trigger. Steps to reproduce: 1. Open the default startup file. 2. Go to the Compositor. 3. Add a 'Glare' node. 4. Add a 'Flip X' node. 5. Add a 'Lens Distortion' node with projector on and dispersion set to 1. 6. Add another 'Flip X' node. 7. Connect to the output. This issue occurs on both macOS (iMac) and Windows 10 systems. A .blend file that reproduces the issue is attached. I discovered this issue by opening an old .blend file and rendering it. If you have trouble reproducing this error or need more assistance in debugging this problem on my machines, please feel free to reach out, and I'll be happy to help.
HMage added the
Type
Report
Status
Needs Triage
Severity
Normal
labels 2024-03-27 18:16:56 +01:00

Can reproduce issue in 4.1, but not in 4.2, so will close.

@OmarEmaraDev Not sure if this bug is known for 4.1 in case there will be corrective release.

Can reproduce issue in 4.1, but not in 4.2, so will close. @OmarEmaraDev Not sure if this bug is known for 4.1 in case there will be corrective release.
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2024-03-27 20:13:00 +01:00
Author

Hello.

What are the recommendations to users living on latest release? Roll back to 4.0?

Apologies for writing in a closed issue, since this issue seems to be the most relevant place to write. If this is not an appropriate place, I'll be thankful if you point out where should I seek that answer.

As an end-user, I am stumped as for what to do here - I understood the response as "wait for 4.2", since I don't see any activity towards fixing it in 4.1. I could be wrong, but for the moment it seems like I have to ignore 4.1, roll back to 4.0, and wait until 4.2 is officially released.

Feel free to close again, but would welcome any pointers for a user like me who encountered this issue.

Hello. What are the recommendations to users living on latest release? Roll back to 4.0? Apologies for writing in a closed issue, since this issue seems to be the most relevant place to write. If this is not an appropriate place, I'll be thankful if you point out where should I seek that answer. As an end-user, I am stumped as for what to do here - I understood the response as "wait for 4.2", since I don't see any activity towards fixing it in 4.1. I could be wrong, but for the moment it seems like I have to ignore 4.1, roll back to 4.0, and wait until 4.2 is officially released. Feel free to close again, but would welcome any pointers for a user like me who encountered this issue.
HMage reopened this issue 2024-03-28 17:55:30 +01:00
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2024-03-28 17:55:33 +01:00

Sorry, I missed, that this worked on 4.0. Will confirm since this is regression.

To me it seems, that there will be corrective release for 4.1, so this could be fixed. But in case there won't be one, depending on what you do, alphas are fairly safe to use. Obviously it is best to backup and save often, but that is just good practice anyway.

Sorry, I missed, that this worked on 4.0. Will confirm since this is regression. To me it seems, that there will be corrective release for 4.1, so this could be fixed. But in case there won't be one, depending on what you do, alphas are fairly safe to use. Obviously it is best to backup and save often, but that is just good practice anyway.
Richard Antalik changed title from Compositor artefacts to Regression: Compositor artefacts 2024-03-28 19:35:58 +01:00
Habib Gahbiche self-assigned this 2024-04-01 22:47:41 +02:00
Member

@HMage Thanks for the report. I submitted a fix, could you try this build (also for your more complex node setups): https://builder.blender.org/download/patch/PR120149/

I'm suspecting only the flip node is causing all the problems here so it would be nice if you could confirm the fix.

@HMage Thanks for the report. I submitted a fix, could you try this build (also for your more complex node setups): https://builder.blender.org/download/patch/PR120149/ I'm suspecting only the flip node is causing all the problems here so it would be nice if you could confirm the fix.
Author

On intel mac and windows, the fix works as expected.

tested with this build:
blender-4.1.1-candidate+main-PR120149.85bdfb8cddcd-darwin.x86_64-release

Thanks for the fix!

On intel mac and windows, the fix works as expected. tested with this build: blender-4.1.1-candidate+main-PR120149.85bdfb8cddcd-darwin.x86_64-release Thanks for the fix!
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-04 10:53:53 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119973
No description provided.