source/blender/compositor/operations/COM_FlipOperation.h
@@ -16,6 +16,9 @@ class FlipOperation : public MultiThreadedOperation {
 
  public:
   FlipOperation();
+  bool determine_depending_area_of_interest(rcti *input,
+                                            ReadBufferOperation *read_operation,
+                                            rcti *output) override;
   void execute_pixel_sampled(float output[4], float x, float y, PixelSampler sampler) override;
 
   void init_execution() override;
